fib/amq-config.yml
apiVersion: v1
kind: Service
metadata:
  name: amq-web-svc
  namespace: fibonacci
spec:
  type: NodePort
  selector:
    app: amq
  ports:
  - port: 8161
    targetPort: 8161
    nodePort: 31001
---
apiVersion: v1
kind: Service
metadata:
  name: amq-svc
  namespace: fibonacci
spec:
  type: ClusterIP
  selector:
    app: amq
  ports:
  - port: 61616
    targetPort: 61616
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amq
  namespace: fibonacci
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amq
  template:
    metadata:
      labels:
        app: amq
    spec:
      containers:
      - name: amq
        image: rmohr/activemq:5.15.9
        resources:
          limits:
            memory: "2Gi"
        ports:
        - containerPort: 61616
        - containerPort: 8161
