fib/artemis-config.yml
apiVersion: v1
kind: Service
metadata:
  name: artemis-console-svc
  namespace: fibonacci
spec:
  type: NodePort
  selector:
    app: artemis
  ports:
  - port: 8161
    targetPort: 8161
    nodePort: 31001
---
apiVersion: v1
kind: Service
metadata:
  name: artemis-svc
  namespace: fibonacci
spec:
  type: ClusterIP
  selector:
    app: artemis
  ports:
  - port: 61616
    targetPort: 61616
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artemis
  namespace: fibonacci
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artemis
  template:
    metadata:
      labels:
        app: artemis
    spec:
      containers:
      - name: artemis
        image: apache/activemq-artemis:2.37.0
        resources:
          limits:
            memory: "2Gi"
        ports:
        - containerPort: 61616
        - containerPort: 8161
