fib/manager-config.yml
apiVersion: v1
kind: Service
metadata:
  name: manager-svc
  namespace: fibonacci
spec:
  selector:
    app: manager
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager
  namespace: fibonacci
spec:
  replicas: 2
  selector:
    matchLabels:
      app: manager
  template:
    metadata:
      labels:
        app: manager
    spec:
      containers:
      - name: manager
        image: golenski/fibonacci-task-manager:1.3.0
        resources:
          limits:
            memory: "700Mi"
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 5
          periodSeconds: 5
          failureThreshold: 1
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 5
          periodSeconds: 5
          failureThreshold: 3
