fib/pgadmin-config.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-svc
  namespace: fibonacci
spec:
  type: NodePort
  selector:
    app: pgadmin
  ports:
  - port: 8080
    targetPort: 80
    nodePort: 31000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: fibonacci
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      volumes:
        - name: pgadmin-storage
          persistentVolumeClaim:
              claimName: pgadmin-pvc
      containers:
      - name: pgadmin
        image: dpage/pgadmin4:8.4
        resources:
          limits:
            memory: "2Gi"
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /var/lib/pgadmin
            name: pgadmin-storage
