fib/redis-config.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: fibonacci
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: fibonacci
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7.4.1
        resources:
          limits:
            memory: "2Gi"
        ports:
        - containerPort: 6379
