fib/worker-config.yml
apiVersion: v1
kind: Service
metadata:
  name: worker-svc
  namespace: fibonacci
spec:
  selector:
    app: worker
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: fibonacci
spec:
  replicas: 3
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: golenski/fibonacci-worker:1.0
        resources:
          limits:
            memory: "300Mi"
        ports:
        - containerPort: 8080
